# cs_cpp_course

week_1/: CMakeLists.txt  README.md
week_1/src/: main.cpp  node.cpp  node.hpp
week_2/: CMakeLists.txt  README.txt
week_2/src/: main.cpp
